[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/dirt1.png" type="Texture" id=1]
[ext_resource path="res://Tile.gd" type="Script" id=2]
[ext_resource path="res://Sprites/highlight.png" type="Texture" id=3]
[ext_resource path="res://Sprites/whiteflowerbutton.png" type="Texture" id=4]
[ext_resource path="res://Sprites/pinkflowerbutton.png" type="Texture" id=5]
[ext_resource path="res://Sprites/sunflowerbutton.png" type="Texture" id=6]
[ext_resource path="res://Sprites/lotus.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Tile" type="Area2D"]
z_index = 2
script = ExtResource( 2 )

[node name="Ground" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Highlight" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="SunflowerSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="PinkflowerSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="WhiteflowerSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="LotusSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 20
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tile_mouse_exited"]
